force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/Sales_Order_Dispatch_Delivery_Note__c.object-meta.xml
<CustomObject>
    <label>Delivery Note</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Delivery note name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>