force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Person Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Party__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.isPrimary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>