force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Customer_Party__c.field-meta.xml
<CustomField>
    <fullName>Customer_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/ Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders Dispatch (Delivery Note)</relationshipLabel>
    <relationshipName>Sales_Orders_Dispatch_Delivery_Note</relationshipName>
    <type>Lookup</type>
</CustomField>