force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>