force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/DC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>DC_Record_Type__c</fullName>
    <formula>if( !ISBLANK(Sales_Order_Return__c),&apos;SOR&apos;,if(!ISBLANK( MRN__c ),&apos;MRN&apos;,if(!ISBLANK( Sales_Order__c ),&apos;SO&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Record Type</label>
    <type>Text</type>
</CustomField>