force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Delivery_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Number__c</fullName>
    <formula>if( text( Sales_Order__r.Ware_House__r.City__c) == &apos;Kolkata&apos;, &apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;GDNT&apos;+RIGHT( Name , LEN(Name) - 4),if( text(Sales_Order__r.Ware_House__r.City__c) == &apos;Gurugram&apos;, &apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;GDNT&apos;+RIGHT( Name , LEN(Name) - 4),&apos;Please select Place on supply on SO.&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Note Number</label>
    <type>Text</type>
</CustomField>