force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Docket_LR_No__c.field-meta.xml
<CustomField>
    <fullName>Docket_LR_No__c</fullName>
    <label>Docket LR No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>