force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Duplicate_for_supplier_Transporter__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_for_supplier_Transporter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Duplicate for supplier/Transporter</label>
    <type>Checkbox</type>
</CustomField>