force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Email_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Contact__c</fullName>
    <label>Email of Contact</label>
    <type>Email</type>
</CustomField>