force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <label>Invoice Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>