force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>