force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/isTaxinvoice__c.field-meta.xml
<CustomField>
    <fullName>isTaxinvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTax Invoice?</label>
    <type>Checkbox</type>
</CustomField>