force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/LC_Expected_date__c.field-meta.xml
<CustomField>
    <fullName>LC_Expected_date__c</fullName>
    <label>LC Expected date</label>
    <type>Date</type>
</CustomField>