force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/LC_No__c.field-meta.xml
<CustomField>
    <fullName>LC_No__c</fullName>
    <label>LC No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>