force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/LC_Tenure__c.field-meta.xml
<CustomField>
    <fullName>LC_Tenure__c</fullName>
    <label>LC Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>