force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRN</label>
    <referenceTo>MRN__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>