force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Pdf_View__c.field-meta.xml
<CustomField>
    <fullName>Pdf_View__c</fullName>
    <label>Pdf View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Pricing</fullName>
                <default>true</default>
                <label>With Pricing</label>
            </value>
            <value>
                <fullName>Without Pricing</fullName>
            </value>
            <value>
                <fullName>With Bin no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>