force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_No__c</fullName>
    <label>Reference No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>