force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge__c</fullName>
    <label>Reverse Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>