force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Delivery Note</relationshipLabel>
    <relationshipName>Delivery_Note</relationshipName>
    <type>Lookup</type>
</CustomField>