force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Sales_Order_Return__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Return</label>
    <referenceTo>Sales_Order_Return__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>