force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping  Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Notes (Shipping  Account)</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>