force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/With_Bin_Number__c.field-meta.xml
<CustomField>
    <fullName>With_Bin_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Bin Number</label>
    <type>Checkbox</type>
</CustomField>