force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/fields/Without_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Without_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Without Pricing</label>
    <type>Checkbox</type>
</CustomField>