force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/validationRules/validation_of_checkbox_bin_and_pricing.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_of_checkbox_bin_and_pricing</fullName>
    <active>true</active>
    <errorConditionFormula>With_Bin_Number__c == true &amp;&amp;  Without_Pricing__c == true</errorConditionFormula>
    <errorMessage>Only one can be selected without pricing or without bin number.</errorMessage>
</ValidationRule>