force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Note_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Customer_Party__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Remark__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>