force-app/main/default/objects/Sales_Order_Dispatch_Delivery_Note__c/listViews/Pending_Delivery_Notes.listView-meta.xml
<ListView>
    <fullName>Pending_Delivery_Notes</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Note_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Customer_Party__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Remark__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Pending Delivery Notes</label>
</ListView>